# W55RP20-Web-Board-Control

./: .gitignore  .gitmodules  .rnd  CMakeLists.txt  README.md  SENSOR_GATEWAY_WORK_PLAN.md  SNMP_AGENT_WORK_PLAN.md  ioLibrary_snmp_patch.patch  ioLibrary_snmp_patch_HOW_TO_APPLY.md
cert_work/: .gitignore  README.md  ca_openssl.cnf  server_openssl.cnf
libraries/: CMakeLists.txt
main/: CMakeLists.txt
main/App/: App.c  App_linker.ld  CMakeLists.txt
main/Boot/: Boot.c  CMakeLists.txt
main/SPI_Mode_Master/: CMakeLists.txt  SPI_Mode_Master.c
patches/: 001_pico-sdk_watchdog.patch  002_ioLIbrary_Driver.patch
port/app/: CMakeLists.txt  WIZ5XXSR-RP_Debug.h  port_common.h
port/app/FreeRTOS-Kernel/inc/: FreeRTOSConfig.h
port/app/aws-iot-device-sdk-embedded-C/inc/: core_http_config.h  core_mqtt_config.h  http_transport_interface.h  mqtt_transport_interface.h  transport_interface.h
port/app/aws-iot-device-sdk-embedded-C/src/: http_transport_interface.c  mqtt_transport_interface.c
port/app/board/inc/: WIZnet_board.h
port/app/board/src/: WIZnet_board.c
port/app/configuration/inc/: ConfigData.h  common.h  segcp.h
port/app/configuration/src/: ConfigData.c  segcp.c  util.c
port/app/http_server/inc/: httpParser.h  httpServer.h  httpServerUpdate.h  httpUtil.h
port/app/http_server/src/: httpParser.c  httpServer.c  httpServerUpdate.c  httpUtil.c
port/app/ioLibrary_Driver/inc/: w5x00_gpio_irq.h  w5x00_spi.h
port/app/ioLibrary_Driver/src/: w5x00_gpio_irq.c  w5x00_spi.c
port/app/mbedtls/inc/: SSLConfig.h  SSLInterface.h  SSL_Random.h
port/app/mbedtls/src/: SSLInterface.c  SSL_Random.c
port/app/modbus/inc/: mb.h
port/app/modbus/src/: mb.c  mbascii.c  mbrtu.c  mbserial.c  mbtcp.c  mbtimer.c
port/app/platform_handler/inc/: bufferHandler.h  deviceHandler.h  dnsHandler.h  flashHandler.h  gpioHandler.h  httpHandler.h  httpsAuth.h  netHandler.h  pinCtrl.h  spiHandler.h  storageHandler.h  uartHandler.h
port/app/platform_handler/src/: bufferHandler.c  deviceHandler.c  dhcp_cb.c  dnsHandler.c  flashHandler.c  gpioHandler.c  httpHandler.c  httpsAuth.c  mqttsHandler.c  netHandler.c  pinCtrl.c  spiHandler.c  storageHandler.c  timerHandler.c  uartHandler.c
port/app/platform_handler/web/: board.html
port/app/serial_to_ethernet/inc/: seg.h
port/app/serial_to_ethernet/src/: seg.c
port/boot/: CMakeLists.txt  WIZ5XXSR-RP_Debug.h  port_common.h
port/boot/board/inc/: WIZnet_board.h
port/boot/board/src/: WIZnet_board.c
port/boot/configuration/inc/: ConfigData.h  common.h  segcp.h
port/boot/configuration/src/: ConfigData.c  segcp.c
port/boot/ioLibrary_Driver/inc/: wiznet_spi.h  wiznet_spi_pio.h
port/boot/ioLibrary_Driver/src/: w5x00_spi.c  wiznet_spi_pio.c
port/boot/platform_handler/inc/: deviceHandler.h  dhcp_cb.h  flashHandler.h  gpioHandler.h  storageHandler.h  uartHandler.h
port/boot/platform_handler/src/: deviceHandler.c  flashHandler.c  gpioHandler.c  storageHandler.c  timerHandler.c  uartHandler.c
port/boot/serial_to_ethernet/inc/: seg.h
port/boot/serial_to_ethernet/src/: seg.c
style/: restyle.py
tools/: hex_to_uf2_converter.py  html_to_c_header.py  merge_hex.py
